--- a/app/src/main/res/drawable/start_button_shape.xml
+++ b/app/src/main/res/drawable/start_button_shape.xml
@@ -1,13 +1,12 @@
-
 <?xml version="1.0" encoding="utf-8"?>
 <!--shape:形状 rectangle 长方形-->
 <!--corners 边角-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!--设置背景颜色-->
-    <solid android:color="@color/teal_200"/>
+    <solid android:color="#D8E49917"/>
     <!--设置角为半圆  radius 半径-->
-    <corners android:radius="20dp"/>
+    <corners android:radius="10dp"/>
     <!--bottom 下 top 上 left左 right右-->
     <padding
         android:bottom="10dp"
