--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Activity.MainActivity"
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:background="@mipmap/background"
+    android:id="@+id/root_main">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!--包裹布局-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+        <!--标题部分-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="31dp"
+            android:layout_weight="4"
+            android:orientation="vertical">
+
+
+            <!--success_banner-->
+            <ImageView
+                android:id="@+id/main_banner"
+                android:layout_width="268dp"
+                android:layout_height="678dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:src="@drawable/title" />
+
+        </LinearLayout>
+
+        <!--模式部分-->
+
+        <!--相关设置-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="329dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            //简单模式
+
+            <com.example.androidapp.SelfView.XLButton
+                android:id="@+id/start_easy"
+                style="@style/mode_btn"
+                android:text="@string/easy_mode"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
+
+            //普通模式
+
+            <com.example.androidapp.SelfView.XLButton
+                android:id="@+id/start_normal"
+                style="@style/mode_btn"
+                android:text="@string/normal_mode"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
+
+
+            //困难模式
+
+            <com.example.androidapp.SelfView.XLButton
+                android:id="@+id/start_hard"
+                style="@style/mode_btn"
+                android:text="@string/hard_mode"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:layout_weight="3"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <!--设置-->
+            <Button
+                android:id="@+id/main_setting"
+                style="@style/main_bg"
+                android:background="@drawable/main_setting"
+                android:layout_gravity="bottom"
+                android:layout_marginEnd="200dp"/>
+
+            <!--排行榜-->
+            <Button
+                android:id="@+id/score"
+                style="@style/main_bg"
+                android:background="@drawable/score"
+                android:layout_gravity="bottom"/>
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+</RelativeLayout>
