--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -47,12 +47,11 @@
         <!--返回按钮-->
         <ImageButton
             android:id="@+id/pager_back"
-            android:layout_marginTop="40dp"
-            android:layout_marginStart="20dp"
             style="@style/operation_btn"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="40dp"
             android:background="@drawable/btn_shape_next"
-            android:src="@drawable/level_back"
-            />
+            android:src="@drawable/level_back" />
 
         <!--页面控制器-->
         <LinearLayout
@@ -73,7 +72,7 @@
                 android:id="@+id/pager_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1/2"
+                android:text="1/1"
                 android:layout_gravity="center_vertical"
                 style="@style/ShowPagerMessage"
                 />
