晚删了main，level，link三个界面

--- a/app/src/main/res/drawable/progressbar_bg.xml
+++ b/app/src/main/res/drawable/progressbar_bg.xml
@@ -27,8 +27,8 @@
                 <corners android:radius="50dp"/>
 
                 <gradient
-                    android:endColor="#fff000"
-                    android:startColor="#fff000"
+                    android:endColor="#FF991D"
+                    android:startColor="#FF6C1D"
                     />
             </shape>
         </clip>
