--- a/app/src/main/res/drawable/prop_background.xml
+++ b/app/src/main/res/drawable/prop_background.xml
@@ -4,9 +4,19 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!--设置背景颜色-->
-    <solid android:color="#D8E49917"/>
+    <solid android:color="#E2489BF4"/>
     <!--设置角为半圆  radius 半径-->
-    <corners android:radius="10dp"/>
+    <corners android:radius="30dp"/>
+    <stroke
+        android:width="3dp"
+        android:color="#803F51B5"
+        />
+    <padding
+        android:bottom="1dp"
+        android:left="2dp"
+        android:right="2dp"
+        android:top="2dp"
+        />
     <!--bottom 下 top 上 left左 right右-->
     <padding
         android:bottom="10dp"
