--- a/app/src/main/res/drawable/view_store_show_prop_bg.xml
+++ b/app/src/main/res/drawable/view_store_show_prop_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#ffffff"
+    <solid android:color="#F18BF5"
         />
 
     <corners android:radius="30dp"
