--- a/app/src/main/res/layout/activity_level.xml
+++ b/app/src/main/res/layout/activity_level.xml
@@ -4,30 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.LevelActivity"
+    android:background="@mipmap/backg12"
 
-    android:background="@mipmap/background"
-    >
+    tools:context=".Activity.LevelActivity">
 
     <!--关卡列表-->
     <HorizontalScrollView
         android:id="@+id/level_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/page_controller"
-
-        android:scrollbars="none"
         android:fillViewport="true"
-        >
+        android:scrollbars="none"
+        app:layout_constraintBottom_toTopOf="@id/page_controller"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
             android:id="@+id/level_root"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="match_parent">
 
         </RelativeLayout>
 
@@ -38,50 +35,63 @@
         android:id="@+id/page_controller"
         android:layout_width="match_parent"
         android:layout_height="180dp"
-        app:layout_constraintTop_toBottomOf="@id/level_pager"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/level_pager">
 
         <!--返回按钮-->
+
+        <!--页面控制器-->
+
         <ImageButton
             android:id="@+id/pager_back"
             style="@style/operation_btn"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/btn_shape_next"
-            android:src="@drawable/level_back" />
+            android:layout_width="80dp"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="61dp"
+            android:layout_marginEnd="46dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="42dp"
+            android:background="?attr/selectableItemBackground"
+            android:src="@drawable/home" />
 
-        <!--页面控制器-->
         <LinearLayout
-            android:layout_marginTop="45dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            >
+            android:layout_width="225dp"
+            android:layout_height="48dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="72dp"
+            android:layout_marginEnd="67dp"
+            android:layout_marginTop="60dp">
 
             <Button
                 android:id="@+id/pager_up"
                 style="@style/pager_bg"
-                android:background="@drawable/level_page_up_enable"
-                android:enabled="false"
-                />
-
-            <com.example.androidapp.SelfView.XLTextView
-                android:id="@+id/pager_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1/1"
-                android:layout_gravity="center_vertical"
-                style="@style/ShowPagerMessage"
-                />
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/bow_left"
+                android:enabled="false" />
 
             <Button
                 android:id="@+id/pager_down"
                 style="@style/pager_bg"
-                android:background="@drawable/level_page_down"
-                />
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/bow_right" />
+
+            <com.example.androidapp.SelfView.XLTextView
+                android:id="@+id/pager_text"
+                style="@style/ShowPagerMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="1/1" />
 
         </LinearLayout>
 
