--- a/app/src/main/res/layout/activity_link.xml
+++ b/app/src/main/res/layout/activity_link.xml
@@ -2,140 +2,204 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Activity.LinkActivity"
-    android:background="@drawable/bg_success_failure_link"
-
     android:id="@+id/root_link"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@mipmap/backg12"
 
     android:clipChildren="false"
-    >
+
+    tools:context=".Activity.LinkActivity">
 
     <!--关卡，道具，暂停信息-->
-    <RelativeLayout
-        android:id="@+id/message_show"
+
+
+    <!--金币-->
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/link_message"
-        >
+        android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
-            android:layout_marginBottom="5dp"
-            >
+            android:background="@drawable/score_background"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <!--关卡-->
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                android:layout_width="match_parent"
+                android:layout_height="52dp">
 
-                <com.example.androidapp.SelfView.XLTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="1dp"
-                    android:text="@string/Link"
-                    style="@style/link_level"
-                    />
+                <com.example.androidapp.SelfView.XLButton
+                    android:layout_width="26dp"
+                    android:layout_height="43dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="@drawable/pause"
+                    android:foregroundGravity="center_vertical|center" />
 
-                <com.example.androidapp.SelfView.XLTextView
-                    android:id="@+id/link_level_text"
-                    android:layout_width="wrap_content"
+                <SeekBar
+                    android:id="@+id/seekBar2"
+                    android:layout_width="240dp"
                     android:layout_height="wrap_content"
-                    android:text="15"
-                    android:paddingStart="25dp"
-                    style="@style/link_level_message"
-                    />
+                    android:layout_gravity="center"
+                    android:layout_weight="4"
+                    android:max="100"
+                    android:progress="100"
+                    android:progressDrawable="@drawable/timer_seekbar"
+                    android:thumb="@drawable/apple"
+                    tools:ignore="MissingConstraints" />
 
             </LinearLayout>
 
-            <!--道具-->
-            <RelativeLayout
-                    android:id="@+id/link_props"
-                    style="@style/link_prop_relative">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="52dp">
 
-                <!--道具 拳击-->
-                <swu.xl.numberitem.NumberOfItem
-                        android:id="@+id/prop_fight"
-                        style="@style/link_props"
-                        app:srcResource="@drawable/link_prop_fight" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    tools:ignore="MissingConstraints">
 
-                <!--道具 炸弹-->
-                <swu.xl.numberitem.NumberOfItem
-                        android:id="@+id/prop_bomb"
-                        style="@style/link_props"
-                        app:srcResource="@drawable/link_prop_bomb" />
+                    <com.example.androidapp.SelfView.XLTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="关卡"
+                        android:textColor="@color/white"
+                        android:textSize="28sp" />
 
-                <!--道具 混乱-->
-                <swu.xl.numberitem.NumberOfItem
-                        android:id="@+id/prop_refresh"
-                        style="@style/link_props"
-                        app:srcResource="@drawable/link_prop_resort" />
+                    <com.example.androidapp.SelfView.XLTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="4"
+                        android:textColor="@color/white"
+                        android:textSize="28sp" />
 
-                <!--暂停-->
-                <ImageView
-                        android:id="@+id/link_pause"
-                        android:layout_width="55dp"
-                        android:layout_height="55dp"
-                        android:src="@drawable/link_stop" />
+                </LinearLayout>
 
-            </RelativeLayout>
+                <LinearLayout
+                    android:layout_width="330dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:background="@drawable/prop_background"
+                    android:orientation="horizontal">
 
+                    <com.example.androidapp.SelfView.XLTextView
+                        android:layout_width="20dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="金币:"
+                        android:textColor="#FFC107"
+                        android:textSize="28sp" />
 
-        </RelativeLayout>
+                    <com.example.androidapp.SelfView.XLLinearLayout
+                        android:layout_width="17dp"
+                        android:layout_height="34dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:background="@drawable/view_store_show_simple_money_bg">
 
-    </RelativeLayout>
+                        <ImageView
+                            android:layout_width="2dp"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:background="@drawable/coin" />
 
-    <!--金币-->
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/message_show"
-            android:orientation="horizontal"
+                        <com.example.androidapp.SelfView.XLTextView
+                            android:layout_width="6dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:text="1000"
+                            android:textSize="15sp" />
+                    </com.example.androidapp.SelfView.XLLinearLayout>
+
+                    <com.example.androidapp.SelfView.XLTextView
+                        android:layout_width="20dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="得分:"
+                        android:textColor="#2AF8FF"
+                        android:textSize="28sp" />
+
+                    <com.example.androidapp.SelfView.XLTextView
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="1000"
+                        android:textColor="#FFFFFF"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout6"
+            android:layout_width="344dp"
+            android:layout_height="83dp"
+            android:background="@drawable/prop_background"
             android:gravity="center_vertical"
-            android:background="@drawable/link_message"
-            android:layout_marginEnd="40dp"
+            android:orientation="horizontal"
+            android:paddingBottom="2dp"
             android:paddingTop="0dp"
-            android:paddingBottom="2dp">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.91"
+            tools:layout_conversion_absoluteHeight="146dp"
+            tools:layout_conversion_absoluteWidth="310dp">
 
-        <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/link_coin"
-                android:layout_marginStart="80dp" />
+            <swu.xl.numberitem.NumberOfItem
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginStart="25dp"
+                android:layout_weight="1"
+                app:srcResource="@drawable/link_prop_tip" />
 
-        <com.example.androidapp.SelfView.XLTextView
-                android:id="@+id/link_money_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:text="1099"
-                style="@style/link_money_text" />
+            <swu.xl.numberitem.NumberOfItem
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginEnd="25dp"
+                android:layout_weight="1"
+                app:srcResource="@drawable/link_prop_refresh" />
 
-    </LinearLayout>
-
-    <!--时间控制-->
-    <swu.xl.circleprogress.CircleProgress
-            android:id="@+id/time_show"
-            android:layout_width="122dp"
-            android:layout_height="120dp"
-            app:textLeftPadding="20"
-            app:textTopPadding="3"
-            app:textSize="17" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/link_layout">
+            <swu.xl.numberitem.NumberOfItem
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_marginEnd="25dp"
+                android:layout_weight="1"
+                app:srcResource="@drawable/link_prop_bomb1" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!--布局部分-->
+    <!--时间控制-->
 
+    <!--布局部分-->
 
 
 </RelativeLayout>
