--- a/app/src/main/res/layout/setting_view.xml
+++ b/app/src/main/res/layout/setting_view.xml
@@ -22,8 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:scaleType="fitXY"
-            android:src="@drawable/view_setting_bg"
-            />
+            android:src="@drawable/start_button_easy_shape" />
 
         <!--具体内容-->
         <LinearLayout
@@ -45,7 +44,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="背景音乐" />
+                    android:text="背景音乐"
+                    android:textColor="#FF5722" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -57,7 +57,7 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginEnd="10dp"
-                        android:background="@drawable/view_setting_pic_bg"
+                        android:background="@drawable/store_prop_bg_shape"
                         android:src="@drawable/view_setting_music_pic" />
 
                     <SeekBar
@@ -71,7 +71,7 @@
                         android:progressDrawable="@drawable/progressbar_bg"
                         android:secondaryProgress="100"
                         android:splitTrack="false"
-                        android:thumb="@drawable/seek_bar_point" />
+                        android:thumb="@drawable/cherry" />
 
                 </LinearLayout>
 
@@ -92,7 +92,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:text="游戏音效" />
+                    android:text="游戏音效"
+                    android:textColor="#FF5722" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -104,8 +105,9 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginEnd="10dp"
-                        android:background="@drawable/view_setting_pic_bg"
-                        android:src="@drawable/view_setting_sound_effect" />
+                        android:background="@drawable/store_prop_bg_shape"
+                        android:src="@drawable/view_setting_sound_effect"
+                        app:srcCompat="@drawable/view_setting_music_pic" />
 
                     <SeekBar
                         android:id="@+id/seek_bar_effect"
@@ -118,7 +120,7 @@
                         android:progressDrawable="@drawable/progressbar_bg"
                         android:secondaryProgress="100"
                         android:splitTrack="false"
-                        android:thumb="@drawable/seek_bar_point" />
+                        android:thumb="@drawable/stra" />
 
                 </LinearLayout>
 
@@ -156,9 +158,8 @@
         android:layout_above="@+id/setting_content"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-50dp"
-        android:background="@drawable/view_setting_banner"
+        android:background="@drawable/peach"
         android:gravity="center_horizontal">
-
 
 
     </RelativeLayout>
