--- a/app/src/main/res/layout/setting_view.xml
+++ b/app/src/main/res/layout/setting_view.xml
@@ -18,34 +18,23 @@
         >
 
         <!--背景颜色-->
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/start_button_easy_shape" />
 
         <!--具体内容-->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/setiing_background"
             android:orientation="vertical">
 
             <!--背景音乐-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="50dp"
-                android:layout_marginEnd="20dp"
                 android:orientation="vertical">
-
-                <com.example.androidapp.SelfView.XLTextView
-                    style="@style/Setting_Music_Text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:text="背景音乐"
-                    android:textColor="#FF5722" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -71,9 +60,17 @@
                         android:progressDrawable="@drawable/progressbar_bg"
                         android:secondaryProgress="100"
                         android:splitTrack="false"
-                        android:thumb="@drawable/cherry" />
+                        android:thumb="@drawable/ice1" />
 
                 </LinearLayout>
+
+                <com.example.androidapp.SelfView.XLTextView
+                    style="@style/Setting_Music_Text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="背景音乐"
+                    android:textColor="#0E8CC5" />
 
 
             </LinearLayout>
@@ -82,18 +79,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
                 android:orientation="vertical">
-
-                <com.example.androidapp.SelfView.XLTextView
-                    style="@style/Setting_Music_Text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:text="游戏音效"
-                    android:textColor="#FF5722" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -120,9 +109,17 @@
                         android:progressDrawable="@drawable/progressbar_bg"
                         android:secondaryProgress="100"
                         android:splitTrack="false"
-                        android:thumb="@drawable/stra" />
+                        android:thumb="@drawable/droplet" />
 
                 </LinearLayout>
+
+                <com.example.androidapp.SelfView.XLTextView
+                    style="@style/Setting_Music_Text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:text="游戏音效"
+                    android:textColor="#8F19AF" />
 
 
             </LinearLayout>
@@ -158,7 +155,7 @@
         android:layout_above="@+id/setting_content"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="-50dp"
-        android:background="@drawable/peach"
+        android:background="@drawable/icecream"
         android:gravity="center_horizontal">
 
 
