完成排行榜页面，修改score数据库表结构

--- a/app/src/main/res/layout/activity_link.xml
+++ b/app/src/main/res/layout/activity_link.xml
@@ -56,37 +56,32 @@
             <!--道具-->
             <RelativeLayout
                 android:id="@+id/link_props"
-                style="@style/link_prop_relative"
-                >
+                style="@style/link_prop_relative">
 
                 <!--道具 拳击-->
                 <swu.xl.numberitem.NumberOfItem
                     android:id="@+id/prop_fight"
                     style="@style/link_props"
-                    app:srcResource="@drawable/link_prop_fight"
-                    />
+                    app:srcResource="@drawable/link_prop_fight" />
 
                 <!--道具 炸弹-->
                 <swu.xl.numberitem.NumberOfItem
                     android:id="@+id/prop_bomb"
                     style="@style/link_props"
-                    app:srcResource="@drawable/link_prop_bomb"
-                    />
+                    app:srcResource="@drawable/link_prop_bomb" />
 
                 <!--道具 混乱-->
                 <swu.xl.numberitem.NumberOfItem
                     android:id="@+id/prop_refresh"
                     style="@style/link_props"
-                    app:srcResource="@drawable/link_prop_resort"
-                    />
+                    app:srcResource="@drawable/link_prop_resort" />
 
                 <!--暂停-->
                 <ImageView
                     android:id="@+id/link_pause"
                     android:layout_width="55dp"
                     android:layout_height="55dp"
-                    android:src="@drawable/link_stop"
-                    />
+                    android:src="@drawable/link_stop" />
 
             </RelativeLayout>
 
@@ -100,29 +95,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/message_show"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:background="@drawable/link_message"
         android:layout_marginEnd="40dp"
+        android:background="@drawable/link_message"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:paddingTop="0dp"
-        android:paddingBottom="2dp"
-        >
+        android:paddingBottom="2dp">
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/link_coin"
             android:layout_marginStart="80dp"
-            />
+            android:src="@drawable/link_coin" />
 
         <com.example.androidapp.SelfView.XLTextView
             android:id="@+id/link_money_text"
+            style="@style/link_money_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
             android:text="1099"
-            style="@style/link_money_text"
-            />
+            android:textAlignment="center" />
 
     </LinearLayout>
 
@@ -132,9 +124,8 @@
         android:layout_width="122dp"
         android:layout_height="120dp"
         app:textLeftPadding="20"
-        app:textTopPadding="3"
         app:textSize="17"
-        />
+        app:textTopPadding="3" />
 
     <!--布局部分-->
 
